--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="EngineersGate_mock">
-        <wb-resource deploy-path="/" source-path="/public"/>
-        <property name="context-root" value="EngineersGate_mock"/>
+    <wb-module deploy-name="test_tomcat">
+        <wb-resource deploy-path="/" source-path="/public" tag="defaultRootSource"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <property name="context-root" value="test_tomcat"/>
+        <property name="java-output-path" value="/test_tomcat/build/classes"/>
     </wb-module>
 </project-modules>
